# ai-rag-enterprise-knowledge-base

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  main.py
src/api/: auth.py  documents.py  query.py
src/core/: chains.py  embeddings.py  llm.py  retriever.py  vectorstore.py
src/ingestion/: chunkers.py  loaders.py  pipeline.py
src/models/: documents.py
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_ingestion/: __init__.py  test_chunkers.py
